Undo java modules, the world isnt ready for this